--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -11,30 +11,30 @@
 %
 % Important note:
 % This template requires the resume.cls file to be in the same directory as the
-% .tex file. The resume.cls file provides the resume style used for structuring the
-% document.
+% .tex file. The resume.cls file provides the resume style used for structuring
+% the document.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%------------------------------------------------------------------------------
 
 \documentclass{resume} % Use the custom resume.cls style
-\usepackage{color,hyperref}
-\definecolor{darkblue}{rgb}{0.0,0.0,0.8}
-\hypersetup{colorlinks,breaklinks,linkcolor=darkblue,urlcolor=darkblue,anchorcolor=darkblue,citecolor=darkblue}
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+
+% document margins
+\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
+\usepackage{hyperref}
 
 \name{Anna Ho} % Your name
-%\address{Max-Planck-Institut f{\"u}r Astro¨nomie \\ K{\"o}nigstuhl 17, 69117 Heidelberg, Germany} % Your address
-\address{annayqho@gmail.edu \\ \href{annaho.net}{annaho.net}} % Your phone number and email
+\address{ah@astro.caltech.edu} % Your phone number and email
+\address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
 
 \begin{document}
 
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 %	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
 
