update education section

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -32,23 +32,30 @@
 
 \begin{document}
 
+
 %------------------------------------------------------------------------------
-%	EDUCATION SECTION
+%   EDUCATION SECTION
 %------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
 
-{\bf California Institute of Technology (Caltech)}, Pasadena, CA
+{\bf California Institute of Technology (Caltech)}, Pasadena CA
 \begin{itemize}
-\item Ph.D., Astrophysics \hfill {expected June 2020} 
+\item Ph.D., Astrophysics,
+  Advisor: Prof. Shrinivas Kulkarni \hfill expected {\em June 2020}
 \end{itemize}
 
-{\bf Massachusetts Institute of Technology (MIT)}, Cambridge, MA
 \begin{itemize}
-\item B.S., Physics \hfill {received June 2014} 
+  \item M.S., Astrophysics \hfill expected {\em June 2017}
+\end{itemize}
+
+{\bf Massachusetts Institute of Technology (MIT)}, Cambridge MA
+\begin{itemize}
+\item B.S., Physics \hfill {\em June 2014}
 \end{itemize}
 
 \end{rSection}
+
 
 %----------------------------------------------------------------------------------------
 %	EMPLOYMENT SECTION
