update honors and awards section

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -86,9 +86,11 @@
 
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%	HONORS AND AWARDS
-%----------------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+%   HONORS AND AWARDS
+%------------------------------------------------------------------------------
+
 
 \begin{rSection}{Fellowships and Awards}
 
@@ -104,10 +106,12 @@ Ford Foundation Fellowship, Honorable Mention \hfill {\em 2014}
 \item
 Karl Taylor Compton Prize, MIT \hfill {\em 2014} 
 \item
-American Astronomical Society Chambliss Astronomy Achievement Student Awards, \hfill {\em 2014}
+American Astronomical Society Chambliss Astronomy Achievement Student Awards, 
+\hfill {\em 2014}
 Honorable Mention 
 \item
-First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill {\em 2013} 
+First Place, Dewitt Wallace Prize for Science Writing for the Public, 
+MIT \hfill {\em 2013} 
 \item
 Burchard Scholars Program, MIT \hfill {\em 2012} \\
 \end{itemize}
