Get rid of preamble, add some research projects

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -1,21 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Medium Length Professional CV
-% LaTeX Template
-% Version 2.0 (8/5/13)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Trey Hunner (http://www.treyhunner.com/)
-%
-% Important note:
-% This template requires the resume.cls file to be in the same directory as the
-% .tex file. The resume.cls file provides the resume style used for structuring
-% the document.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 %------------------------------------------------------------------------------
 %   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %------------------------------------------------------------------------------
@@ -27,6 +9,7 @@
 \usepackage{hyperref}
 
 \name{Anna Ho} % Your name
+\address{Citizenship: US, UK}
 \address{ah@astro.caltech.edu} % Your phone number and email
 \address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
 
@@ -41,7 +24,7 @@
 
 {\bf California Institute of Technology (Caltech)}, Pasadena CA
 \begin{itemize}
-\item Ph.D., Astrophysics,
+\item Ph.D., Astrophysics, 
   Advisor: Prof. Shrinivas Kulkarni \hfill expected {\em June 2020}
 \end{itemize}
 
@@ -57,9 +40,34 @@
 \end{rSection}
 
 
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+%	RESEARCH SECTION
+%------------------------------------------------------------------------------
+
+\begin{rSection}{Invited and Contributed Talks}
+``\emph{The Cannon:} Data-Driven Modeling for Large Datasets of Spectra
+\hfill 2014-17
+\begin{itemize}
+  \item
+    Wrote open-source code in Python to model large datasets of spectra
+  \item
+    On invitation, designed and taught a two-day workshop on spectral modeling
+    in Python at Gemini Observatory in La Serena, Chile. 
+    Audience include graduate students, post docs, and faculty members from
+    around Chile.
+  \item
+    Presented work as a talk at five international conferences
+  \item
+    Presented work as lead author on two publications and 
+    co-author on four publications
+\end{itemize}
+
+\end{rSection}
+
+%------------------------------------------------------------------------------
 %	EMPLOYMENT SECTION
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+
 
 \begin{rSection}{Employment}
 
