--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -44,8 +44,8 @@
 %	RESEARCH SECTION
 %------------------------------------------------------------------------------
 
-\begin{rSection}{Invited and Contributed Talks}
-``\emph{The Cannon:} Data-Driven Modeling for Large Datasets of Spectra
+\begin{rSection}{Research Projects}
+\emph{The Cannon:} Data-Driven Modeling for Large Datasets of Spectra
 \hfill 2014-17
 \begin{itemize}
   \item
@@ -62,43 +62,24 @@
     co-author on four publications
 \end{itemize}
 
-\end{rSection}
-
-%------------------------------------------------------------------------------
-%	EMPLOYMENT SECTION
-%------------------------------------------------------------------------------
-
-
-\begin{rSection}{Employment}
-
-\begin{rSubsection}{Fulbright Scholar}{September 2014-July 2015}{German-American Fulbright Commission}{Heidelberg, Germany}
-\item Astrophysics research at the Max Planck Institute for Astronomy (MPIA) in Heidelberg, Germany
-\item Public outreach and science writing at the MPIA-affiliated House of Astronomy
-\end{rSubsection}
-
-\begin{rSubsection}{Student Blogger}{August 2010-June 2014}{MIT Admissions Office}{Cambridge, MA}
-\item Wrote \href{http://mitadmissions.org/blogs/author/annayq/archives}{weekly blog posts} on the MIT admissions website, read by over 7,000 visitors daily
-\item Blog posts featured by the \href{https://aas.org/posts/blog/2014/04/congressional-visits-day-undergraduate-perspective}{American Astronomical Society} and the \href{http://web.mit.edu/mitpsc/pressroom/stories/ho.html}{MIT Public Service Center} %, and \href{https://www.reddit.com/r/todayilearned/comments/20ac4w/til_that_before_neil_degrasse_tyson_went_on_the/}{reddit}
-\item Corresponded with prospective students through e-mail and webcasts
-\end{rSubsection}
-
-\begin{rSubsection}{Undergraduate Researcher}{Summer 2012, Summer 2013}{National Radio Astronomy Observatory}{Charlottesville, VA}
-\item NSF Research Experiences for Undergraduates (REU) Program
-\item Presented my work at the 2013 and 2014 American Astronomical Society Annual Winter Conference as well as at the 2013 Council on Undergraduate Research Conference
-\end{rSubsection}
-
-\begin{rSubsection}{Course Assistant}{Spring 2013}{MIT Physics Department}{Cambridge, MA}
-\item Wrote lecture notes in LaTeX for the undergraduate Quantum I and Quantum II courses
-\item Graded weekly problem sets for the undergraduate Quantum I course
-\end{rSubsection}
+Pulsars as a Probe of Magnetic Fields and Plasma Physics
+\hfill 2012-14
+\begin{itemize}
+  \item Wrote open-source code in Python to measure the 
+    magnetic field of the Milky Way from radio telescope data
+  \item Wrote a successful application for observing time on the 
+    Very Large Array in New Mexico
+  \item Presented work as a poster at the 2013 and 2014 
+    American Astronomical Society annual winter conference, 
+    and at the National Science Foundation (NSF) Conference of 
+    Research Experiences for Undergraduates (REU)
+\end{itemize}
 
 \end{rSection}
-
 
 %------------------------------------------------------------------------------
 %   HONORS AND AWARDS
 %------------------------------------------------------------------------------
-
 
 \begin{rSection}{Fellowships and Awards}
 
@@ -126,35 +107,82 @@ Burchard Scholars Program, MIT \hfill {\em 2012} \\
 
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%	TEACHING, OUTREACH, PUBLIC POLICY EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+%   TEACHING AND OUTREACH EXPERIENCE SECTION
+%------------------------------------------------------------------------------
 
-\begin{rSection}{Teaching, Public Outreach, and Science Policy}
+\begin{rSection}{Teaching, Public Outreach, Science Policy}
 
-\begin{rSubsection}{Congressional Visits Day}{March 2014}{American Astronomical Society Representative}{Washington, DC}
-\item Served as one of 15 representatives of the American Astronomical Society on Capitol Hill for the annual Science-Engineering-Technology Working Group Congressional Visits Day
-\item Two days of training and workshops about the federal budgeting process, how to engage with congressional staff, advocating for science funding, and particular key issues in astronomy
-\item Set up and led meetings with Massachusetts Congressional Staff to advocate for federal funding for scientific research and undergraduate research programs
-\end{rSubsection}
+  \begin{rSubsection}{Caltech Astronomy Outreach}{Feb 2015-present}
+    {}{Pasadena, CA}
+  \item Run outreach evenings, give public talks, answer visitors' questions,
+    facilitate telescope viewing
+  \end{rSubsection}
 
-\begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}{American Astronomical Society 223rd Meeting}{National Harbor, MD}
-\item One of 30 early-career astronomers selected for a two-day professional development workshop on effectively communicating with students and the public
-\end{rSubsection}
+  \begin{rSubsection}{TA for Undergraduate and Graduate Courses in Astrophysics}
+    {2015-16}{}{Pasadena, CA}
+  \item Grade problem sets, hold office hours
+  \end{rSubsection}
 
-\begin{rSubsection}{MIT Educational Studies Program}{Fall 2010-Spring 2014}{Teacher}{Cambridge, MA}
-\item Designed and taught 12 different science classes for over 500 middle- and high-school students, ranging from stand-alone lectures to eight-week-long courses
-\end{rSubsection}
+  \begin{rSubsection}{Teacher, Institute for Educational Advancement}
+    {Fall 2015}{}{Pasadena, CA}
+  \item Designed and taught a nine-week course on multiwavelength astronomy
+    for gifted 7-12 year olds
+  \end{rSubsection}
 
-\begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}{Public speaker and volunteer}{Charlottesville, VA}
-\item Organized a volunteering program for National Radio Astronomy Observatory summer students
-\item Gave regular public talks on astronomy research at the observatory
-\end{rSubsection}
+  \begin{rSubsection}
+    {Haus der Astronomie: Center for Astronomy Education and Outreach}
+    {Sept 2014-July 2015}{}{Heidelberg, Germany}
+  \item Organized and taught a cosmology workshop for high school students
+  \item Wrote \href{http://www.mpia.de/news/science/2015-03-biosignatures}
+    {a press release} for the Max Planck Institute for Astronomy
+  \item Wrote \href{http://www.universetoday.com/120820/distant-stellar-nurseries-this-time-in-high-definition/}
+    {a blog post} for the UniverseToday news site
+  \end{rSubsection}
 
-\begin{rSubsection}{MIT Four Weeks For America Program, Teach For America}{January 2011}{Teaching Assistant}{Pueblo Pintado Navajo Reservation, NM}
-\item Created new modules for the high school math curriculum
-\item Tutored and mentored students
-\end{rSubsection}
+  \begin{rSubsection}{Congressional Visits Day}{March 2014}{}{Washington, DC}
+  \item Attended briefings about the federal budget process
+  \item Set up and led meetings with Congressional Staff to advocate
+    for federal funding for scientific research
+  \end{rSubsection}
+
+  \begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}
+  {American Astronomical Society 223rd Meeting}{National Harbor, MD}
+  \item Selected for a two-day professional development workshop on
+    effectively communicating science with the public
+  \end{rSubsection}
+
+  \begin{rSubsection}{MIT Educational Studies Program}{Fall 2010-Spring 2014}
+    {Teacher}{Cambridge, MA}
+  \item Designed and taught 12 different science classes for over 500 middle-
+    and high-school students
+  \end{rSubsection}
+
+  \begin{rSubsection}{MIT Admissions Blogger}{Fall 2010-Spring 2014}
+    {MIT Admissions Office}{Cambridge, MA}
+  \item Wrote weekly entries about MIT life, read by over 7,000 people daily
+  \item Corresponded with prospective students through e-mail and webcasts
+  \end{rSubsection}
+
+  \begin{rSubsection}{Course Assistant}{Spring 2013}
+    {MIT Physics Department}{Cambridge, MA}
+  \item Wrote lecture notes in LaTeX for the undergraduate Quantum I
+    and Quantum II courses
+  \item Graded weekly problem sets for the undergraduate Quantum I course
+  \end{rSubsection}
+
+  \begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}
+    {Public speaker and volunteer}{Charlottesville, VA}
+  \item Organized a volunteering program for National Radio Astronomy Observatory 
+    summer students
+  \item Gave regular public talks at the observatory
+  \end{rSubsection}
+
+  \begin{rSubsection}{MIT Four Weeks For America Program, Teach For America}
+    {January 2011}{Teaching Assistant}{Pueblo Pintado Navajo Reservation, NM}
+  \item Created new modules for the high school math curriculum
+  \item Tutored and mentored students
+  \end{rSubsection}
 
 \end{rSection}
 
