condense teaching and leadership

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -15,7 +15,6 @@
 
 \begin{document}
 
-
 %------------------------------------------------------------------------------
 %   EDUCATION SECTION
 %------------------------------------------------------------------------------
@@ -49,11 +48,12 @@
 \hfill 2014-17
 \begin{itemize}
   \item
-    Wrote open-source code in Python to model large datasets of spectra
+    As a graduate student at Caltech and a Fulbright Scholar in Germany,
+    wrote open-source code in Python to model large datasets of spectra
   \item
-    On invitation, designed and taught a two-day workshop on spectral modeling
-    in Python at Gemini Observatory in La Serena, Chile. 
-    Audience include graduate students, post docs, and faculty members from
+    On invitation, designed and taught a two-day workshop on using Python to
+    model spectra at Gemini Observatory in La Serena, Chile. 
+    Audience include graduate students, post docs, and faculty from
     around Chile.
   \item
     Presented work as a talk at five international conferences
@@ -65,14 +65,15 @@
 Pulsars as a Probe of Magnetic Fields and Plasma Physics
 \hfill 2012-14
 \begin{itemize}
-  \item Wrote open-source code in Python to measure the 
-    magnetic field of the Milky Way from radio telescope data
+  \item As a summer intern at the National Radio Astronomy Observatory 
+    in Charlottesville, VA, wrote open-source code in Python to measure the 
+    galaxy's magnetic field using radio telescope data
   \item Wrote a successful application for observing time on the 
     Very Large Array in New Mexico
-  \item Presented work as a poster at the 2013 and 2014 
-    American Astronomical Society annual winter conference, 
+  \item Presented work as a poster at two
+    American Astronomical Society conferences,
     and at the National Science Foundation (NSF) Conference of 
-    Research Experiences for Undergraduates (REU)
+    Research Experiences for Undergraduates
 \end{itemize}
 
 \end{rSection}
@@ -111,39 +112,42 @@ Burchard Scholars Program, MIT \hfill {\em 2012} \\
 %   TEACHING AND OUTREACH EXPERIENCE SECTION
 %------------------------------------------------------------------------------
 
-\begin{rSection}{Teaching, Public Outreach, Science Policy}
+\begin{rSection}{Teaching and Public Outreach}
 
-  \begin{rSubsection}{Caltech Astronomy Outreach}{Feb 2015-present}
+  \begin{rSubsection}{Caltech Astronomy Public Outreach}{Feb 2015-present}
     {}{Pasadena, CA}
   \item Run outreach evenings, give public talks, answer visitors' questions,
     facilitate telescope viewing
   \end{rSubsection}
 
-  \begin{rSubsection}{TA for Undergraduate and Graduate Courses in Astrophysics}
-    {2015-16}{}{Pasadena, CA}
-  \item Grade problem sets, hold office hours
+  \begin{rSubsection}{Teaching Assistant} 
+    {2013-present}{}{MIT \& Caltech}
+  \item Caltech Astrophysics Dept: grade student work, hold office hours 
+    for UG and graduate courses
+  \item MIT Physics Dept: Transcribed lecture notes and graded student work
+    for UG quantum mechanics
   \end{rSubsection}
 
-  \begin{rSubsection}{Teacher, Institute for Educational Advancement}
-    {Fall 2015}{}{Pasadena, CA}
-  \item Designed and taught a nine-week course on multiwavelength astronomy
-    for gifted 7-12 year olds
+  \begin{rSubsection}{Teacher for K-12 Educational Programs}
+    {2010-2017}{}{}
+  \item Through the Educational Studies Program at MIT and the 
+    Institute for Educational Advancement in Pasadena, 
+    I have designed and taught science
+    classes for over 500 K-12 students.
+  \item Through the MIT/Teach For America Four Weeks For America Program,
+    I served as a teaching assistant for one month on a high school in
+    the Pueblo Pintado Navajo Reservation in New Mexico. I created
+    new modules for the math curriculum, and tutored and mentored students.
   \end{rSubsection}
 
   \begin{rSubsection}
-    {Haus der Astronomie: Center for Astronomy Education and Outreach}
-    {Sept 2014-July 2015}{}{Heidelberg, Germany}
+    {Haus der Astronomie}{Sept 2014-July 2015}
+    {Center for Astronomy Education and Outreach}{Heidelberg, Germany}
   \item Organized and taught a cosmology workshop for high school students
   \item Wrote \href{http://www.mpia.de/news/science/2015-03-biosignatures}
     {a press release} for the Max Planck Institute for Astronomy
   \item Wrote \href{http://www.universetoday.com/120820/distant-stellar-nurseries-this-time-in-high-definition/}
     {a blog post} for the UniverseToday news site
-  \end{rSubsection}
-
-  \begin{rSubsection}{Congressional Visits Day}{March 2014}{}{Washington, DC}
-  \item Attended briefings about the federal budget process
-  \item Set up and led meetings with Congressional Staff to advocate
-    for federal funding for scientific research
   \end{rSubsection}
 
   \begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}
@@ -152,23 +156,10 @@ Burchard Scholars Program, MIT \hfill {\em 2012} \\
     effectively communicating science with the public
   \end{rSubsection}
 
-  \begin{rSubsection}{MIT Educational Studies Program}{Fall 2010-Spring 2014}
-    {Teacher}{Cambridge, MA}
-  \item Designed and taught 12 different science classes for over 500 middle-
-    and high-school students
-  \end{rSubsection}
-
   \begin{rSubsection}{MIT Admissions Blogger}{Fall 2010-Spring 2014}
     {MIT Admissions Office}{Cambridge, MA}
   \item Wrote weekly entries about MIT life, read by over 7,000 people daily
   \item Corresponded with prospective students through e-mail and webcasts
-  \end{rSubsection}
-
-  \begin{rSubsection}{Course Assistant}{Spring 2013}
-    {MIT Physics Department}{Cambridge, MA}
-  \item Wrote lecture notes in LaTeX for the undergraduate Quantum I
-    and Quantum II courses
-  \item Graded weekly problem sets for the undergraduate Quantum I course
   \end{rSubsection}
 
   \begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}
@@ -178,23 +169,20 @@ Burchard Scholars Program, MIT \hfill {\em 2012} \\
   \item Gave regular public talks at the observatory
   \end{rSubsection}
 
-  \begin{rSubsection}{MIT Four Weeks For America Program, Teach For America}
-    {January 2011}{Teaching Assistant}{Pueblo Pintado Navajo Reservation, NM}
-  \item Created new modules for the high school math curriculum
-  \item Tutored and mentored students
-  \end{rSubsection}
-
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%	CAMPUS LEADERSHIP SECTION
-%----------------------------------------------------------------------------------------
 
-\begin{rSection}{Campus Leadership}
+\begin{rSection}{Leadership}
+
+  \begin{rSubsection}{Science-Engineering-Technology Congressional Visits Day (SETCVD)}{March 2014}{}{Washington, DC}
+  \item The only undergraduate student among 15 graduate students, post docs, and professors selected to represent the American Astronomical Society on Capitol Hill for the annual SETCVD
+  \item Two days of training and workshops about the federal budgeting process 
+  \item Set up and led meetings with Congressional Staff to advocate for federal funding for scientific research and undergraduate research programs
+  \end{rSubsection}
 
 \begin{rSubsection}{MIT Chancellor's Student Leadership Summit}{September 2013}{}{}
-\item One of 30 undergraduates nominated to attend this annual one-day summit
-\item Training on the MIT administrative process, workshops on effectively advocating for student issues 
+\item One of 30 undergraduate students nominated to attend this annual one-day summit
+\item Received training on the MIT administrative process and effectively advocating for student issues 
 \end{rSubsection}
 
 \begin{rSubsection}{MIT Committee on the Undergraduate Program (CUP)}{2013-14}{}{}
