elaborate on awards

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -9,8 +9,8 @@
 \usepackage{hyperref}
 
 \name{Anna Ho} % Your name
-\address{Citizenship: US, UK}
 \address{ah@astro.caltech.edu} % Your phone number and email
+\address{Citizenship: US, UK}
 \address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
 
 \begin{document}
@@ -82,7 +82,7 @@ Pulsars as a Probe of Magnetic Fields and Plasma Physics
 %   HONORS AND AWARDS
 %------------------------------------------------------------------------------
 
-\begin{rSection}{Fellowships and Awards}
+\begin{rSection}{Honors and Awards}
 
 \begin{itemize}
 \item
@@ -92,13 +92,12 @@ Fulbright Scholarship \hfill {\em 2014-15}
 \item
 Ida M. Green Fellowship, MIT \hfill {\em 2014} 
 \item
-Ford Foundation Fellowship, Honorable Mention \hfill {\em 2014} 
-\item
-Karl Taylor Compton Prize, MIT \hfill {\em 2014} 
-\item
-American Astronomical Society Chambliss Astronomy Achievement Student Awards, 
-\hfill {\em 2014}
-Honorable Mention 
+  Karl Taylor Compton Prize, MIT: \hfill {\em 2014} \\
+``the highest awards presented by the Institute\ldots
+in recognition of excellent achievements in citizenship 
+and devotion to the welfare of MIT. 
+They reflect outstanding contributions to the MIT community as a whole, 
+sustained over a significant number of years.'' 
 \item
 First Place, Dewitt Wallace Prize for Science Writing for the Public, 
 MIT \hfill {\em 2013} 
