add locations to research

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -44,37 +44,34 @@
 %------------------------------------------------------------------------------
 
 \begin{rSection}{Research Projects}
-\emph{The Cannon:} Data-Driven Modeling for Large Datasets of Spectra
-\hfill 2014-17
-\begin{itemize}
+  \begin{rSubsection}{Data-Driven Modeling for Large Datasets of Spectra}
+    {2014-17}{Caltech; Max Planck Institute of Astronomy}
+    {Pasadena CA; Heidelberg, Germany}
   \item
-    As a graduate student at Caltech and a Fulbright Scholar in Germany,
-    wrote open-source code in Python to model large datasets of spectra
+    Wrote open-source code in Python to model large datasets of spectra
   \item
-    On invitation, designed and taught a two-day workshop on using Python to
-    model spectra at Gemini Observatory in La Serena, Chile. 
-    Audience include graduate students, post docs, and faculty from
+    On invitation, designed and taught a two-day workshop
+    at Gemini Observatory in La Serena, Chile. 
+    Audience include 13 graduate students, post docs, and faculty from
     around Chile.
   \item
     Presented work as a talk at five international conferences
   \item
     Presented work as lead author on two publications and 
     co-author on four publications
-\end{itemize}
+\end{rSubsection}
 
-Pulsars as a Probe of Magnetic Fields and Plasma Physics
-\hfill 2012-14
-\begin{itemize}
-  \item As a summer intern at the National Radio Astronomy Observatory 
-    in Charlottesville, VA, wrote open-source code in Python to measure the 
-    galaxy's magnetic field using radio telescope data
+\begin{rSubsection}{Pulsars as a Probe of Magnetic Fields and Plasma Physics}{2012-14}{National Radio Astronomy Observatory}{Charlottesville VA}
+  \item 
+    Wrote open-source code in Python to measure the 
+    galaxy's magnetic field using radio data
   \item Wrote a successful application for observing time on the 
     Very Large Array in New Mexico
   \item Presented work as a poster at two
     American Astronomical Society conferences,
     and at the National Science Foundation (NSF) Conference of 
     Research Experiences for Undergraduates
-\end{itemize}
+\end{rSubsection}
 
 \end{rSection}
 
@@ -139,33 +136,34 @@ Burchard Scholars Program, MIT \hfill {\em 2012} \\
     new modules for the math curriculum, and tutored and mentored students.
   \end{rSubsection}
 
+  \begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}
+  {American Astronomical Society 223rd Meeting}{National Harbor, MD}
+  \item One of 30 early-career astronomers selected for a two-day professional development workshop on effectively communicating science with the public
+  \end{rSubsection}
+
+  \begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}
+    {Public speaker and volunteer}{Charlottesville, VA}
+  \item Organized a volunteering program for National Radio Astronomy Observatory summer interns
+  \item Gave regular public talks at the observatory
+  \end{rSubsection}
+
+\end{rSection}
+
+\begin{rSection}{Writing}
+
   \begin{rSubsection}
     {Haus der Astronomie}{Sept 2014-July 2015}
     {Center for Astronomy Education and Outreach}{Heidelberg, Germany}
-  \item Organized and taught a cosmology workshop for high school students
   \item Wrote \href{http://www.mpia.de/news/science/2015-03-biosignatures}
     {a press release} for the Max Planck Institute for Astronomy
   \item Wrote \href{http://www.universetoday.com/120820/distant-stellar-nurseries-this-time-in-high-definition/}
     {a blog post} for the UniverseToday news site
   \end{rSubsection}
 
-  \begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}
-  {American Astronomical Society 223rd Meeting}{National Harbor, MD}
-  \item Selected for a two-day professional development workshop on
-    effectively communicating science with the public
-  \end{rSubsection}
-
   \begin{rSubsection}{MIT Admissions Blogger}{Fall 2010-Spring 2014}
     {MIT Admissions Office}{Cambridge, MA}
-  \item Wrote weekly entries about MIT life, read by over 7,000 people daily
+  \item Wrote \href{http://mitadmissions.org/blogs/profile/annayq}{weekly entries} about MIT life, read by over 7,000 people daily
   \item Corresponded with prospective students through e-mail and webcasts
-  \end{rSubsection}
-
-  \begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}
-    {Public speaker and volunteer}{Charlottesville, VA}
-  \item Organized a volunteering program for National Radio Astronomy Observatory 
-    summer students
-  \item Gave regular public talks at the observatory
   \end{rSubsection}
 
 \end{rSection}
