delete Burchard award

--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -50,10 +50,9 @@
   \item
     Wrote open-source code in Python to model large datasets of spectra
   \item
-    On invitation, designed and taught a two-day workshop
-    at Gemini Observatory in La Serena, Chile. 
-    Audience include 13 graduate students, post docs, and faculty from
-    around Chile.
+    On invitation, designed and taught a two-day Python workshop on modeling
+    specta, at Gemini Observatory in La Serena, Chile.
+    Audience include 13 graduate students, post docs, and faculty.
   \item
     Presented work as a talk at five international conferences
   \item
@@ -87,19 +86,14 @@ National Science Foundation Graduate Research Fellowship \hfill {\em 2014-19}
 \item
 Fulbright Scholarship \hfill {\em 2014-15}
 \item
-Ida M. Green Fellowship, MIT \hfill {\em 2014} 
-\item
   Karl Taylor Compton Prize, MIT: \hfill {\em 2014} \\
 ``the highest awards presented by the Institute\ldots
 in recognition of excellent achievements in citizenship 
-and devotion to the welfare of MIT. 
-They reflect outstanding contributions to the MIT community as a whole, 
+and devotion to the welfare of MIT\ldots
 sustained over a significant number of years.'' 
 \item
 First Place, Dewitt Wallace Prize for Science Writing for the Public, 
 MIT \hfill {\em 2013} 
-\item
-Burchard Scholars Program, MIT \hfill {\em 2012} \\
 \end{itemize}
 
 \end{rSection}
