--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -23,17 +23,18 @@
 
 {\bf California Institute of Technology (Caltech)}, Pasadena CA
 \begin{itemize}
-\item Ph.D., Astrophysics, 
-  Advisor: Prof. Shrinivas Kulkarni \hfill expected {\em June 2020}
-\end{itemize}
-
-\begin{itemize}
-  \item M.S., Astrophysics \hfill expected {\em June 2017}
+  \item Ph.D., Astrophysics \hfill \emph{expected June 2020}
+\item Graduate coursework includes: 
+  Physics of Measurement, Mathematical Methods of Physics,
+  High-Energy Astrophysics, Astronomical Measurements and Instrumentation
 \end{itemize}
 
 {\bf Massachusetts Institute of Technology (MIT)}, Cambridge MA
 \begin{itemize}
 \item B.S., Physics \hfill {\em June 2014}
+\item Coursework includes: Differential Equations, Linear Algebra,
+  Classical Mechanics II, Quantum Physics II-III,
+  Modern Space Science and Engineering, Experimental Physics
 \end{itemize}
 
 \end{rSection}
@@ -110,12 +111,10 @@ MIT \hfill {\em 2013}
     facilitate telescope viewing
   \end{rSubsection}
 
-  \begin{rSubsection}{Teaching Assistant} 
+  \begin{rSubsection}{Teaching Assistant, Caltech and MIT} 
     {2013-present}{}{MIT \& Caltech}
-  \item Caltech Astrophysics Dept: grade student work, hold office hours 
-    for UG and graduate courses
-  \item MIT Physics Dept: Transcribed lecture notes and graded student work
-    for UG quantum mechanics
+  \item Grade student work, hold office hours, LaTeX lecture notes
+    for undergraduate and graduate courses
   \end{rSubsection}
 
   \begin{rSubsection}{Teacher for K-12 Educational Programs}
@@ -180,15 +179,14 @@ MIT \hfill {\em 2013}
 \item Served as one of four student representatives on the CUP, which exercises oversight for the undergraduate academic program
 \end{rSubsection}
 
-\begin{rSubsection}{MIT New House Dormitory President}{2013}{}{}
-\item Supervised committees and officers, represented New House to the Undergraduate Association and Dormitory Council
+\begin{rSubsection}{MIT Dormitory President}{2013}{}{}
+\item Supervised committees and officers, represented dormitory (New House) to the Undergraduate Association and Dormitory Council, organized and ran events to provide a residential support system for students
 \end{rSubsection}
 
-\begin{rSubsection}{MIT Associate Advisor}{Fall 2012-Spring 2014}{}{}
-\item Served as an associate advisor to help freshmen navigate their first year at MIT
-\item Represented New House on the Associate Advising Steering Committee, organized and ran events in New House to provide a residential support system
-\end{rSubsection}
+\end{rSection}
 
+\begin{rSection}{Skills}
+\item Programming Languages: Python
 \end{rSection}
 
 \end{document}
